fix: legacy encode for pre-API-33 in license branch