@@ -37,5 +37,8 @@ public final class VlessParser {
         return value == null || value.isEmpty() ? fallback : value;
     }
 
-    private static String encode(String value) { return URLEncoder.encode(value, StandardCharsets.UTF_8); }
+    private static String encode(String value) {
+        try { return URLEncoder.encode(value, "UTF-8"); }
+        catch (java.io.UnsupportedEncodingException error) { return value; }
+    }
 }
